# Typ

./: .pnp.cjs  LICENSE-BSD  LICENSE-ISC  README.md  package.json
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
