[package]
name = "typ"
version = "0.1.0"
authors = ["Yuuki Rika <yvvki@duck.com>"]
edition = "2021"
description = "Modular text editor"
repository = "https://github.com/yvvki/Typ"
license = "(ISC OR BSD-2-Clause)"
categories = ["text-editors"]

[build-dependencies]
tauri-build = "1.5.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = "1.5.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
